Design et fonctionnalité de la ligne produit sur la panier
- la page panier recharge les articles a chaque fois qu'elle est appelé
- La croix dans ligne de panier doit permettre de supprimer l'article en question

--- a/html/index.html
+++ b/html/index.html
@@ -51,6 +51,7 @@
             <button id="closeSidebar" class="close-btn">&times;</button>
             <h2>Votre Panier</h2>
             <p>Ajoutez des articles à votre panier ici.</p>
+            <div id="productFromPanier"></div>
         </div>
     </div>
 
