--- a/html/productList.html
+++ b/html/productList.html
@@ -12,8 +12,8 @@
 <body>
 
 
-     <!-- Menu -->
-     <header>
+    <!-- Menu -->
+    <header>
         <nav>
             <div class="iconSide">
                 <a href="index.html">
@@ -27,12 +27,13 @@
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
-           
+
             <div id="log">
-                    <button id="panier" >
-                            <img class="icon" src="../assets/icon/shopping-bag.png" alt="login panier"/>
-                        </button> 
-                       <a href="log.html">
+                <button id="panier">
+                    <img class="icon" src="../assets/icon/shopping-bag.png" alt="login panier" />
+                </button>
+
+                <a href="log.html">
                     <img class="icon" src="../assets/icon/login.png" alt="login icon">
                 </a>
             </div>
@@ -46,6 +47,7 @@
             <button id="closeSidebar" class="close-btn">&times;</button>
             <h2>Votre Panier</h2>
             <p>Ajoutez des articles à votre panier ici.</p>
+            <div id="productFromPanier"></div>
         </div>
     </div>
 
@@ -57,7 +59,7 @@
         </div>
     </div>
 
-    
+
     <script src="../js/list.js"></script>
     <script src="../js/panier.js"></script>
 </body>
