--- a/html/productDetail.html
+++ b/html/productDetail.html
@@ -11,7 +11,6 @@
 
 <body>
 
- 
      <!-- Menu -->
      <header>
       <nav>
@@ -39,16 +38,18 @@
       </nav>
   </header>
 
-
-  <!-- Conteneur de la sidebar (invisible par défaut) -->
-  <div id="sidebar-container">
-      <div id="sidebar" class="sidebar">
-          <button id="closeSidebar" class="close-btn">&times;</button>
-          <h2>Votre Panier</h2>
-          <p>Ajoutez des articles à votre panier ici.</p>
-          <div id="productFromPanier"></div>
-      </div>
-  </div>
+   <!-- Conteneur de la sidebar (invisible par défaut) -->
+   <div id="sidebar-container">
+    <div id="sidebar" class="sidebar">
+        <div id="titlePanier">
+            <button id="closeSidebar" class="close-btn">&times;</button>
+            <h2>Votre Panier</h2>
+        </div>
+       
+        <p id="textPanier">Ajoutez des articles à votre panier ici.</p>
+        <div id="productFromPanier"></div>
+    </div>
+</div>
 
   <!-- Contenu de la page du produit -->
   <div id="containerDetail">
