Modif avant de passser a Stripe

--- a/html/index.html
+++ b/html/index.html
@@ -48,12 +48,15 @@
     <!-- Conteneur de la sidebar (invisible par défaut) -->
     <div id="sidebar-container">
         <div id="sidebar" class="sidebar">
+          <div id="titlePanier">
             <button id="closeSidebar" class="close-btn">&times;</button>
             <h2>Votre Panier</h2>
-            <p>Ajoutez des articles à votre panier ici.</p>
-            <div id="productFromPanier"></div>
+          </div>
+    
+          <p id="textPanier">Ajoutez des articles à votre panier ici.</p>
+          <div id="productFromPanier"></div>
         </div>
-    </div>
+      </div>
 
 
         <!-- Bandeau ecriture Home -->
