--- a/html/productList.html
+++ b/html/productList.html
@@ -44,9 +44,12 @@
     <!-- Conteneur de la sidebar (invisible par défaut) -->
     <div id="sidebar-container">
         <div id="sidebar" class="sidebar">
-            <button id="closeSidebar" class="close-btn">&times;</button>
-            <h2>Votre Panier</h2>
-            <p>Ajoutez des articles à votre panier ici.</p>
+            <div id="titlePanier">
+                <button id="closeSidebar" class="close-btn">&times;</button>
+                <h2>Votre Panier</h2>
+            </div>
+
+            <p id="textPanier">Ajoutez des articles à votre panier ici.</p>
             <div id="productFromPanier"></div>
         </div>
     </div>
